[package]
name = "navigator"
version = "0.3.0"
edition = "2021"
description = "A Macro-heavy Domain-Specific Language for console apps with menu systems."
license = "MIT"
readme = "README.md"
repository = "https://github.com/raffimolero/navigator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
